<resources>
    <string name="app_name">UBD Notifikasi Tugas Akhir</string>
    <string name="title_profile">Beranda</string>
    <string name="title_jadwal">Jadwal Ujian</string>
    <string name="title_judul">Judul Penelitian</string>
    <string name="title_nilai">Nilai Ujian</string>
    <string name="title_notifikasi">Notifikasi</string>
    <string name="catatan1">1. Isi form judul sesuai dengan form pengajuan judul yang di ACC kaprodi</string>
    <string name="catatan2">2. Pengajuan judul hanya dapat di lakukan 1 kali</string>
    <string name="catatan3">3. Judul tidak bisa di ubah apabila sudah di kirim.</string>
    <string name="judulsudahdikirim">Judul Penelitian sudah dikirim!\nForm pengajuan judul sudah di tutup.</string>
    <string name="UP"><U>UJIAN PROPOSAL</U></string>
    <string name="UK"><U>UJIAN KOMPREHENSIF</U></string>

    <!-- Channel untuk Notifikasi khusus android O ke atas -->
    <string name="id_channel">ubd_ta_notifikasi</string>
    <string name="nama_channel">UBD TA Notifikasi</string>
    <string name="deskripsi_channel">Notifikasi Tugas Akhir Universitas Bina Darma</string>
</resources>
